<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="5dp">

    <TextView
        android:id="@+id/positionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/company_name"
        android:textSize="16sp"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/positionProfitView"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="20dp"
        android:textStyle="bold"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/positionTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/positionTitle"
        android:layout_toStartOf="@+id/positionProfitView"
        android:layout_marginEnd="16dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:textSize="12sp"
        android:text="@string/default_date" />

    <TextView
        android:id="@+id/positionProfitView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@id/positionDeleteIcon"
        android:text="@string/default_percent"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="8dp"
        android:textSize="17sp"
        android:textColor="@color/green" />

    <ImageView
        android:id="@+id/positionDeleteIcon"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_margin="4dp"
        android:src="@android:drawable/ic_delete"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/delete" />

</RelativeLayout>