<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/portfolioButtonsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray">

    <TextView
        android:id="@+id/profileCapitalView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:gravity="start"
        android:layout_gravity="center_vertical"
        android:text="@string/default_amount"
        android:textSize="20sp"
        android:textColor="@color/white"/>

    <LinearLayout
        android:id="@+id/profileLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textColor="@color/white"
        android:gravity="center"
        android:text="@string/trade"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/profileUsernameView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:gravity="start"
            android:layout_gravity="center_vertical"
            android:text="@string/username"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_weight=".70" />

        <ImageView
            android:id="@+id/positionDeleteIcon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="4dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/profile"
            android:contentDescription="@string/delete" />

    </LinearLayout>

</LinearLayout>